# pedersen-wasm

./: .gitignore  Cargo.toml  benchmark.ts  index.ts  package.json  tsconfig.json
src/: lib.rs
